--- a/experiencia.css
+++ b/experiencia.css
@@ -8,7 +8,7 @@ li{
 body{
     background-color: #0A192F;
     margin: 10px;
-    background-image: url("../MuchaTseBle (2).jpg");
+    background-image: url("./assets/MuchaTseBle (2).jpg");
     background-repeat: no-repeat;
     background-size:cover;
 }
