--- a/sobreStyle.css
+++ b/sobreStyle.css
@@ -4,7 +4,7 @@
 body{
     background-color: #0A192F;
     margin: 10px;
-    background-image: url("../MuchaTseBle (2).jpg");
+    background-image: url("./assets/MuchaTseBle (2).jpg");
     background-repeat: no-repeat;
     background-size:cover;
 }
