--- a/academico.css
+++ b/academico.css
@@ -38,9 +38,11 @@ b{
     text-decoration: none;
 }
 .divMenu{
-    background-image: linear-gradient(to top, transparent, black);
+    background-image: linear-gradient(to top, transparent, rgb(61, 61, 61));
     display: flex;
     flex-direction: row;
+    height: 65px;
+    justify-content: space-around;
 }
 .divLogo{
     width: 6%;
@@ -50,6 +52,10 @@ b{
 }
 .divCorpo{
     padding: 50px;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .divOpt{
     width: 50%;
@@ -57,4 +63,19 @@ b{
     flex-direction: row;
     align-items:end;
     justify-content: space-around;
+}
+#rodape{
+    display: flex;
+    height: 100px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    background-image: linear-gradient(to top, #3c998ec7, transparent);
+}
+#logo{
+    max-height: 25px;
+    max-width: 25px;
+    height: auto;
+    width: auto;
 }
