--- a/experiencia.css
+++ b/experiencia.css
@@ -42,9 +42,11 @@ li:visited{
     text-decoration: none;
 }
 .divMenu{
-    background-image: linear-gradient(to top, transparent, black);
+    background-image: linear-gradient(to top, transparent, rgb(61, 61, 61));
     display: flex;
     flex-direction: row;
+    height: 65px;
+    justify-content: space-around;
 }
 .divLogo{
     width: 6%;
@@ -54,6 +56,10 @@ li:visited{
 }
 .divCorpo{
     padding: 50px;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .divOpt{
     width: 50%;
@@ -64,4 +70,19 @@ li:visited{
 }
 p{
     text-align: justify;
+}
+#rodape{
+    display: flex;
+    height: 100px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    background-image: linear-gradient(to top, #3c998ec7, transparent);
+}
+#logo{
+    max-height: 25px;
+    max-width: 25px;
+    height: auto;
+    width: auto;
 }
