--- a/sobreStyle.css
+++ b/sobreStyle.css
@@ -47,9 +47,11 @@ p{
     padding-right: 44%;
 }
 .divMenu{
-    background-image: linear-gradient(to top, transparent, black);
+    background-image: linear-gradient(to top, transparent, rgb(61, 61, 61));
     display: flex;
     flex-direction: row;
+    height: 65px;
+    justify-content: space-around;
 }
 li{
     font-weight: bold;
@@ -72,7 +74,10 @@ td{
 }
 #divCorpo{
     padding: 50px;
-
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .divOpt{
     width: 50%;
@@ -80,4 +85,19 @@ td{
     flex-direction: row;
     align-items:end;
     justify-content: space-around;
+}
+#rodape{
+    display: flex;
+    height: 100px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    background-image: linear-gradient(to top, #3c998ec7, transparent);
+}
+#logo{
+    max-height: 25px;
+    max-width: 25px;
+    height: auto;
+    width: auto;
 }
