Ajustes de enquadramento

--- a/academico.css
+++ b/academico.css
@@ -41,7 +41,7 @@ b{
     background-image: linear-gradient(to top, transparent, rgb(61, 61, 61));
     display: flex;
     flex-direction: row;
-    height: 65px;
+    height: 6vh;
     justify-content: space-around;
 }
 .divLogo{
@@ -52,7 +52,7 @@ b{
 }
 .divCorpo{
     padding: 50px;
-    height: 650px;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,7 +66,7 @@ b{
 }
 #rodape{
     display: flex;
-    height: 100px;
+    height: 10vh;
     width: 100%;
     flex-direction: column;
     justify-content: end;
