--- a/contato.css
+++ b/contato.css
@@ -42,7 +42,7 @@ li:visited{
     background-image: linear-gradient(to top, transparent, rgb(61, 61, 61));
     display: flex;
     flex-direction: row;
-    height: 65px;
+    height: 6vh;
     justify-content: space-around;
 }
 .divLogo{
@@ -74,7 +74,7 @@ li:visited{
 }
 #rodape{
     display: flex;
-    height: 100px;
+    height: 10vh;
     width: 100%;
     flex-direction: column;
     justify-content: end;
@@ -89,7 +89,7 @@ li:visited{
 }
 .divCorpo{
     padding: 50px;
-    height: 650px;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
