--- a/sobreStyle.css
+++ b/sobreStyle.css
@@ -50,7 +50,7 @@ p{
     background-image: linear-gradient(to top, transparent, rgb(61, 61, 61));
     display: flex;
     flex-direction: row;
-    height: 65px;
+    height: 6vh;
     justify-content: space-around;
 }
 li{
@@ -74,7 +74,7 @@ td{
 }
 #divCorpo{
     padding: 50px;
-    height: 650px;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -88,7 +88,7 @@ td{
 }
 #rodape{
     display: flex;
-    height: 100px;
+    height: 10vh;
     width: 100%;
     flex-direction: column;
     justify-content: end;
