--- a/homeStyle.css
+++ b/homeStyle.css
@@ -110,8 +110,41 @@ li:visited{
     height: auto;
     width: auto;
 }
-@media screen (max-width: 480px){
+
+@media(max-width: 750px) {
+    body{
+        background-position: 100%;
+        background-clip: content-box;
+    }
     #conteudo{
-        flex-direction: column;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    #imagem{
+        max-height: 100px;
+    }
+    #divTexto{
+        font-size: medium;
+        margin-right: 0px;
+        text-align:center;
+        width: 100%;
+    }
+    .divOpt{
+        display: flex;
+        flex-direction: row;
+        font-size: small;
+        flex-wrap: wrap;
+        width: 89%;
+    }
+    .divMenu{
+        justify-content: space-between;
+    }
+    .divLogo{
+        padding-left: 15px;
+        padding-right: 5%;
+    }
+    .logo{
+        max-width: 35px;
     }
 }
