--- a/sobreStyle.css
+++ b/sobreStyle.css
@@ -101,3 +101,37 @@ td{
     height: auto;
     width: auto;
 }
+@media(max-width: 750px) {
+    body{
+        background-position: 100%;
+        background-clip: content-box;
+    }
+    .Softskills{
+        float: none;
+        width: 100%;
+        padding: 0;
+    }
+    #divTexto{
+        font-size: medium;
+        margin-right: 0px;
+        text-align:center;
+        width: 100%;
+    }
+    .divOpt{
+        display: flex;
+        flex-direction: row;
+        font-size: small;
+        flex-wrap: wrap;
+        width: 89%;
+    }
+    .divMenu{
+        justify-content: space-between;
+    }
+    .divLogo{
+        padding-left: 15px;
+        padding-right: 5%;
+    }
+    .logo{
+        max-width: 35px;
+    }
+}
