--- a/sobreStyle.css
+++ b/sobreStyle.css
@@ -117,6 +117,9 @@ td{
         text-align:center;
         width: 100%;
     }
+    section{
+        overflow: auto;
+    }
     .divOpt{
         display: flex;
         flex-direction: row;
