--- a/contato.css
+++ b/contato.css
@@ -131,7 +131,7 @@ li:visited{
     .divOpt{
         display: flex;
         flex-direction: row;
-        font-size: small;
+        font-size:x-small;
         flex-wrap: wrap;
         width: 89%;
     }
