--- a/experiencia.css
+++ b/experiencia.css
@@ -106,7 +106,7 @@ p{
     .divOpt{
         display: flex;
         flex-direction: row;
-        font-size: small;
+        font-size:x-small;
         flex-wrap: wrap;
         width: 89%;
     }
