--- a/sobreStyle.css
+++ b/sobreStyle.css
@@ -117,7 +117,7 @@ td{
     .divOpt{
         display: flex;
         flex-direction: row;
-        font-size: small;
+        font-size:x-small;
         flex-wrap: wrap;
         width: 89%;
     }
