--- a/experiencia.css
+++ b/experiencia.css
@@ -79,6 +79,7 @@ p{
     justify-content: end;
     align-items: center;
     background-image: linear-gradient(to top, #3c998ec7, transparent);
+    font-size: 13px;
 }
 #logo{
     max-height: 25px;
@@ -119,5 +120,11 @@ p{
     }
     .logo{
         max-width: 35px;
+    }
+    footer p{
+        font-size: 8px;
+    }
+    #logo{
+        max-width: 15px;
     }
 }
