--- a/homeStyle.css
+++ b/homeStyle.css
@@ -103,6 +103,7 @@ li:visited{
     justify-content: end;
     align-items: center;
     background-image: linear-gradient(to top, #3c998ec7, transparent);
+    font-size: 13px;
 }
 #logo{
     max-height: 25px;
@@ -146,5 +147,11 @@ li:visited{
     }
     .logo{
         max-width: 35px;
+    }
+    footer p{
+        font-size: 8px;
+    }
+    #logo{
+        max-width: 15px;
     }
 }
