--- a/academico.css
+++ b/academico.css
@@ -72,6 +72,7 @@ b{
     justify-content: end;
     align-items: center;
     background-image: linear-gradient(to top, #3c998ec7, transparent);
+    font-size: 13px;
 }
 #logo{
     max-height: 25px;
@@ -112,5 +113,11 @@ b{
     }
     .logo{
         max-width: 35px;
+    }
+    footer p{
+        font-size: 8px;
+    }
+    #logo{
+        max-width: 15px;
     }
 }
